# SpaceInvaders

./: .gitignore  CMakeLists.txt  StartingScreen.json  main.cpp
include/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Player.cpp  Player.h
